# Audio-MIDI-REPL

./: .gitmodules  README.md  addressof.c  make_audiosystem.sh
SoundWave/: DFT  DirectOSC.cpp  Graph.hpp  SimpleSynth.cpp  WaveGenerator.h  a.out  csound.i  gnuplot_tmpdatafile_m6RSl8  make_adsr.sh  make_chorus.sh  make_csound.sh  make_filter.sh  make_houvimoog.sh  make_kfr.sh  make_moog.sh  make_sample.sh  make_smf.sh  make_sndfile.sh  make_soundwave.sh  make_tcurtis.sh  make_tdiode.sh  make_tenv.sh  make_timprovedmoog.sh  make_tkorg35hpf.sh  make_tkorg35lpf.sh  make_tmooghalf.sh  make_tmoogladder.sh  make_toberheim.sh  make_tsvf.sh  make_twavetable.sh  rbjfilter.c  rbjfilter.h  sample.i  simplesynth.lua
SoundWave/Stk/: .gitignore  .gitmodules
SoundWave/Synth/Maximilian/: README.md
SoundWave/Synth/Modular/: README.md  turtle_parser.i
SoundWave/Synth/Modular/ams-2.2.0/: Makefile.in  configure
SoundWave/Synth/Modular/ams-2.2.0/colors/: Makefile.in
SoundWave/Synth/Modular/ams-2.2.0/demos/: Makefile.in
SoundWave/Synth/Modular/ams-2.2.0/instruments/: Makefile.in
SoundWave/Synth/Modular/ams-2.2.0/man/: Makefile.in
SoundWave/Synth/Modular/ams-2.2.0/pixmaps/: Makefile.in
SoundWave/Synth/Modular/ams-2.2.0/src/: Makefile.in
SoundWave/Synth/Modular/ams.lv2/: dynamicwaves_4.ttl  dynamicwaves_6.ttl  dynamicwaves_8.ttl  vcorgan_4.ttl  vcorgan_6.ttl
SoundWave/Synth/Modular/ttlparser/: Makefile  make_ttl.sh  turtle_parser_wrap.cxx
SoundWave/Synth/mopo/src/: biquad_filter.cpp  biquad_filter.h  delay.cpp  delay.h  distortion.cpp  ladder_filter.cpp  linear_slope.cpp  portamento_slope.cpp  smooth_value.cpp  state_variable_filter.cpp  state_variable_filter.h  stutter.cpp  utils.h
SoundWave/Synth/tau60/: tau60.c  tau60.i  tau60_wrap.c
SoundWave/distortion/: Distortion.cpp  Distortion.h  DistortionFunctions.cpp  DistortionFunctions.h  TSClipper.cpp  TSClipper.h  TSTone.cpp  TSTone.h  shaper.cpp  shaper.h
SoundWave/filters/moog/Auto/: Auto.jucer  compile_commands.json
SoundWave/filters/svf/StateVariableFilter/: README.md  StateVariableFilter.jucer
SoundWave/include/: ADSR.h  Envelope.h  HuovilainenModel.h  ImprovedModel.h  KrajeskiModel.h  LadderFilterBase.h  MicrotrackerModel.h  Moog.h  MusicDSPModel.h  OberheimVariationModel.h  SimplifiedModel.h  SndFileIO.h  SoundWave.h  StilsonModel.h  chorus.hpp
SoundWave/lv2/mephisto.lv2/: .gitlab-ci.yml  ChangeLog  README.md  meson.build  meson_options.txt
SoundWave/lv2/mephisto.lv2/.reuse/: dep5
SoundWave/lv2/mephisto.lv2/dsp/: bank-analyzer_vu-meter.dsp  bank-filter_gain.dsp  bank-filter_through.dsp  bank-instrument_osc.dsp  bank-time_lfo.dsp
SoundWave/lv2/mephisto.lv2/mephisto.lv2/: mephisto.h
SoundWave/lv2/mephisto.lv2/png/: save.png.license
SoundWave/lv2/mephisto.lv2/src/: mephisto.c  mephisto_ui.c
SoundWave/lv2/mephisto.lv2/subprojects/d2tk/: .gitignore  .gitlab-ci.yml  Doxyfile  README.md  check_for_font  meson.build  meson_options.txt  robodoc.rc
SoundWave/lv2/mephisto.lv2/subprojects/d2tk/.reuse/: dep5
SoundWave/lv2/mephisto.lv2/subprojects/d2tk/d2tk/: backend.h  base.h  config.h.in  core.h  d2tk.h  frontend.h  frontend_fbdev.h  frontend_glfw.h  frontend_pugl.h  hash.h  util.h
SoundWave/lv2/mephisto.lv2/subprojects/d2tk/example/: custom_cairo.c  custom_nanovg.c  d2tk_fbdev.c  d2tk_glfw.c  d2tk_pugl.c  example.c  example.h  libre-gui-file.png.license
SoundWave/lv2/mephisto.lv2/subprojects/d2tk/src/: backend_cairo.c  backend_nanovg.c  base.c  base_bar.c  base_bitmap.c  base_button.c  base_combo.c  base_cursor.c  base_custom.c  base_dial.c  base_flowmatrix.c  base_frame.c  base_image.c  base_internal.h  base_label.c  base_layout.c  base_lineedit.c  base_link.c  base_meter.c  base_pane.c  base_pty.c  base_scrollbar.c  base_separator.c  base_spinner.c  base_table.c  base_textfield.c  base_tooltip.c  base_vkb.c  base_wave.c  core.c  core_internal.h  frontend_fbdev.c  frontend_glfw.c  frontend_pugl.c  hash.c  util_spawn.c
SoundWave/lv2/mephisto.lv2/subprojects/d2tk/test/: base.c  core.c  mock.c  mock.h
SoundWave/lv2/mephisto.lv2/subprojects/d2tk/ttf/: FiraCode-Regular.ttf.license  FiraSans-Bold.ttf.license
SoundWave/lv2/mephisto.lv2/subprojects/props.lv2/: README.md  meson.build  meson_options.txt
SoundWave/lv2/mephisto.lv2/subprojects/props.lv2/props.lv2/: props.h
SoundWave/lv2/mephisto.lv2/subprojects/props.lv2/src/: props.c  props_private.h
SoundWave/lv2/mephisto.lv2/subprojects/props.lv2/test/: manifest.ttl.in  props.c  props.ttl  props_test.c
SoundWave/lv2/mephisto.lv2/subprojects/ser_atom.lv2/: README.md  meson.build  meson_options.txt
SoundWave/lv2/mephisto.lv2/subprojects/ser_atom.lv2/ser_atom.lv2/: ser_atom.h
SoundWave/lv2/mephisto.lv2/subprojects/ser_atom.lv2/src/: ser_atom.c
SoundWave/lv2/mephisto.lv2/subprojects/ser_atom.lv2/test/: test.c
SoundWave/lv2/mephisto.lv2/subprojects/timely.lv2/: .gitlab-ci.yml  README.md  meson.build  meson_options.txt
SoundWave/lv2/mephisto.lv2/subprojects/timely.lv2/src/: timely.c
SoundWave/lv2/mephisto.lv2/subprojects/timely.lv2/test/: manifest.ttl.in  timely.c  timely.ttl
SoundWave/lv2/mephisto.lv2/subprojects/timely.lv2/timely.lv2/: timely.h
SoundWave/lv2/mephisto.lv2/ttl/: manifest.ttl.in  mephisto.ttl.in  mephisto_ui.ttl  presets.ttl.in
SoundWave/scripts/: Cranium.lua  b3.lua  bandlimiter.lua  blitsaw.lua  blitsqr.lua  fft.lua  filter.lua  foursine.lua  pa_devices.lua  tauop.lua  test.lua  test_cdll.lua  test_table.lua  testpm.lua
SoundWave/soundtailor/soundtailor/tests/: main.cc
SoundWave/src/: MoogLadders_wrap.cxx  SoundWave.i  SoundWave_wrap.cxx  adsr.cpp  audiosystem_wrap.c  chorus.cpp  chorus.i  chorus_wrap.cxx  kiss_complex_wrap.cxx  kiss_real_wrap.cxx  sample_wrap.cxx
nodes/src/Nodes/Dynamics/: Lag.cpp
nodes/src/Nodes/Filters/: Biquad.cpp
nodes/src/Nodes/Math/: Trigonometric.cpp
nodes/src/Nodes/Trigger/: Differentiator.cpp  Integrator.cpp
src/: audiosystem.i  audiosystem_wrap.c
systems/nodes/: nodes.i  nodes_wrap.cxx
systems/nodes/include/: Constants.h
systems/nodes/src/: AudioBuffer.h  Buffer.h
(+49 files in other folders)
