# SPDX-FileCopyrightText: Hanspeter Portner <dev@open-music-kontrollers.ch>
# SPDX-License-Identifier: CC0-1.0

option('build-debug-overlay',
	type : 'boolean',
	value : false)
option('build-tests',
	type : 'boolean',
	value : true)

option('use-backend-cairo',
	type : 'feature',
	value : 'disabled')
option('use-backend-nanovg',
	type : 'feature',
	value : 'enabled')

option('use-frontend-pugl',
	type : 'feature',
	value : 'enabled')

option('use-fontconfig',
	type : 'feature',
	value : 'enabled')

option('lv2libdir',
	type : 'string',
	value : 'lib/lv2')

option('version', type : 'string', value : '0.18.2')
